fix incorrect z-index value
• set it to same level like dialog. If the value is smaller, the edit/save buttons are not visible

--- a/web/css/preview/preview-default.styl
+++ b/web/css/preview/preview-default.styl
@@ -45,7 +45,7 @@ div.ui-widget-content
 .preview_bar
 	display block
 	position absolute
-	z-index 999
+	z-index 1001
 	.ui-icon
 		margin-right 1px
 		margin-top 1px
